...
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XM6-1j-sao" customClass="PaceTypeButton" customModule="PacesKit" customModuleProvider="target">
                                                            <rect key="frame" x="0.0" y="0.0" width="60" height="34"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="min/km"/>
                                                            <state key="normal" title="min/km"/>
                                                        </button>
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0bc-W4-QS5" customClass="PaceTypeButton" customModule="PacesKit" customModuleProvider="target">
                                                            <rect key="frame" x="79" y="0.0" width="55" height="34"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="min/mi"/>
                                                            <state key="normal" title="min/mi"/>
                                                        </button>
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bJZ-p7-hqu" customClass="PaceTypeButton" customModule="PacesKit" customModuleProvider="target">
                                                            <rect key="frame" x="153" y="0.0" width="31" height="34"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="kph"/>
                                                            <state key="normal" title="kph"/>
                                                        </button>
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kLh-xx-dls" customClass="PaceTypeButton" customModule="PacesKit" customModuleProvider="target">
                                                            <rect key="frame" x="203" y="0.0" width="37" height="34"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="mph"/>
                                                            <state key="normal" title="mph"/>
                                                        </button>
...
                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="On9-dt-gV8" customClass="PaceTypeButton" customModule="PacesKit" customModuleProvider="target">
                                                                    <rect key="frame" x="0.0" y="0.0" width="196" height="34"/>
                                                                    <state key="normal" title="Marathon"/>
                                                                </button>
                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fdJ-s9-qSP" customClass="PaceTypeButton" customModule="PacesKit" customModuleProvider="target">
                                                                    <rect key="frame" x="0.0" y="39" width="196" height="34"/>
                                                                    <state key="normal" title="Half Marathon"/>
                                                                </button>
                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qox-1C-yOC" customClass="PaceTypeButton" customModule="PacesKit" customModuleProvider="target">
                                                                    <rect key="frame" x="0.0" y="78" width="196" height="34"/>
                                                                    <state key="normal" title="10k"/>
                                                                </button>
                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qvt-wE-bGN" customClass="PaceTypeButton" customModule="PacesKit" customModuleProvider="target">
...
                                                            <rect key="frame" x="0.0" y="11" width="240" height="34"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                            <state key="normal" title="Delete"/>
                                                        </button>
                                                    </subviews>
...
