...
    var applyTextColor: () -> UIColor
    var applySelectedTextColor: () -> UIColor
    var applyBackgroundColor: () -> UIColor
    var applySelectedBackgroundColor: () -> UIColor

    let nameButton: PaceTypeButton = PaceTypeButton()
    let textInput: UITextField = UITextField()
    let keyboardToolbar: UIToolbar = UIToolbar()
    let keyboardDoneButton: UIBarButtonItem = UIBarButtonItem(barButtonSystemItem: .done, target: nil, action: nil)
    let labelFontSize: CGFloat = 18
    let buttonTitle = "Custom distance"
    let bag = DisposeBag()

    public var isInputActive: BehaviorRelay<Bool> = BehaviorRelay(value: false)
    public var distance: PublishRelay<Double> = PublishRelay()
    public var selectedDistance: PublishRelay<Double> = PublishRelay()

...
