...
    }

    func setupNavigationBar() {
        let aboutItem = UIBarButtonItem(image: UIImage(named: "iconBars"), style: .plain, target: nil, action: nil)
        let themeItem = UIBarButtonItem(image: UIImage(named: "eye"), style: .plain, target: nil, action: nil)
        aboutItem.accessibilityLabel = "App settings"
        themeItem.accessibilityLabel = "Toggle theme"
        navigationController?.setNavigationBarHidden(false, animated: false)
        navigationItem.title = "Paces"
        navigationItem.leftBarButtonItem = aboutItem
        navigationItem.rightBarButtonItem = themeItem

        themeItem.rx.tap
            .map { _ in AppEnvironment.current.theme }
            .subscribe(onNext: { theme in
...
